# persona-ai

./: .gitignore  CNAME  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SHA256.txt  index.html  package-lock.json  package.json  pyproject.toml  voice_avatar_map.json
.github/workflows/: backend.yml
apps/backend/: .env.example  README.md  run_prod.py
apps/backend/app/: env_bootstrap.py  main.py  paths.py  settings_store.py
apps/desktop/: README.md  package.json
apps/desktop/public/: app.js  desktop-shell.js  index.html  styles.css
apps/desktop/sidecar/: persona-backend.spec  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
assets/config/: default.env
assets/icons/: README.md
assets/screenshots/: README.md
backend/: .env.example  README.md  run.bat
backend/app/: main.py
backend/scripts/: build_rag_index.py  convert_faq_prose.py
data/: faq_dataset.json
docs/: TRUST.md  desktop-data-layout.md  intelligent-avatar-program.md  offline-implementation-steps.md  piper-setup.md  rag-system.md  step-7-evaluation-and-demo.md
docs/architecture/: overview.md
piper_models/: README.md
scripts/: build-desktop.ps1  build-sidecar.ps1  build-sidecar.sh  clean-temps.ps1  clean-temps.sh  ensure-sidecar-binary.ps1  export-app-icon.ps1  generate-sha256.ps1  prepare-desktop-icons.ps1  start-backend.bat  start-backend.ps1  stop-desktop-processes.ps1  sync-desktop-ui.ps1
ui/: app.js  index.html  styles.css
(+12 files in other folders)
