[package]
name = "persona-ai-desktop"
version = "0.1.0"
description = "Persona AI desktop shell"
authors = ["Persona AI Contributors"]
edition = "2021"

[lib]
name = "persona_ai_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
